--- a/style2.css
+++ b/style2.css
@@ -121,7 +121,15 @@ th{
 }
 
 canvas { 
-    padding: 0;
     border-style: solid;
     border-width: 10px;
+    padding: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+h2 {
+    font-size: 30px;
+    text-align: center;
 }
